// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`a full scan of the example project gives the same dashboard, summary and preview pages from both CLI versions: dashboard 1`] = `
"<!-- sluiceway:dashboard v="1" scan-sha="0123456789abcdef0123456789abcdef01234567" scan-run="4242" scan-at="2026-09-21T06:00:00.000Z" full-scan-at="2026-09-21T06:00:00.000Z" full-scan-run="4242" -->

<p align="center">
  <picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://raw.githubusercontent.com/sluiceway/sluiceway/v0.1.0/assets/mascot/failing-2-deletes-replaces-dark.svg">
    <img alt="Sluiceway: 1 preview failed, 2 stacks are pending, some changes delete or replace resources" width="880" src="https://raw.githubusercontent.com/sluiceway/sluiceway/v0.1.0/assets/mascot/failing-2-deletes-replaces-light.svg">
  </picture>
</p>

<div align="center">

🟡&nbsp;**2 pending** · ⚪&nbsp;0 deploying · 🔴&nbsp;1 preview failed · 🟢&nbsp;1 in sync · :warning: **1 pending stack deletes or replaces resources**

Scanned [\`0123456\`](https://github.com/acme/infra/commit/0123456789abcdef0123456789abcdef01234567) on 2026-09-21 06:00 UTC · [run](https://github.com/acme/infra/actions/runs/4242) · <sub>last full scan 2026-09-21 06:00 UTC</sub>

</div>

## Pending

Tick a box to deploy that stack exactly as its row shows it.

> [!CAUTION]
> 1 pending stack deletes or replaces resources: **network:dev**

- [ ] **app:prod** · 2 creates · [preview](https://github.com/acme/infra/runs/106538952701) <!-- sluiceway:row stack="app:prod" state="pending" hash="9fb39d8d82346ac8" fingerprint="6613054be582fdf5" creates="2" -->
  not deployed from this dashboard yet
  <details><summary>2 changes</summary>
  <kbd>create</kbd> <code>command:local:Command</code> <b>start</b><br>
  <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>release</b><br>
  </details>
  <!-- /sluiceway:row -->
- [ ] **network:dev** · 1 create, 1 update, **2 replaces**, **1 delete** · [preview](https://github.com/acme/infra/runs/106538952702) <!-- sluiceway:row stack="network:dev" state="pending" hash="f64ca542f4ede7ae" destroys="3" deletes="1" fingerprint="935cbdaa3d9e0f1b" creates="1" updates="1" replaces="2" -->
  not deployed from this dashboard yet
  :warning: <kbd>DELETE</kbd> <code>random:index/randomString:RandomString</code> <b>subnet</b>
  :warning: <kbd>REPLACE</kbd> <code>local:index/file:File</code> <b>notes</b> · forced by <code>content</code> · also changes <code>contentBase64sha256</code>, <code>contentBase64sha512</code>, <code>contentMd5</code>, <code>contentSha1</code>, <code>contentSha256</code>, <code>contentSha512</code>, <code>id</code>
  :warning: <kbd>REPLACE</kbd> <code>random:index/randomPet:RandomPet</code> <b>name</b> · forced by <code>prefix</code>
  <details><summary>2 other changes</summary>
  <kbd>update</kbd> <code>command:local:Command</code> <b>banner</b> · <code>environment.STAGE</code><br>
  <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>extra</b><br>
  </details>
  <!-- /sluiceway:row -->

- [ ] Deploy all 2 pending stacks <!-- sluiceway:bulk section="pending" -->

## Preview failed

This stack could not be previewed, so it cannot be deployed from here until a scan previews it. Every scan tries it again, and the run on its row holds the tool's own words.

- **site:prod** · preview failed: the tool exited with an error (exit code 1) · [run](https://github.com/acme/infra/actions/runs/4242/job/106502264185) <!-- sluiceway:row stack="site:prod" state="preview-failed" -->
  <!-- /sluiceway:row -->

## In sync

<details><summary>1 stack in sync</summary>

- network:prod <!-- sluiceway:row stack="network:prod" state="in-sync" -->
  <!-- /sluiceway:row -->

</details>

---

- [ ] Rescan all stacks <!-- sluiceway:rescan -->

<sub>[Sluiceway](https://github.com/sluiceway/sluiceway) v0.1.0 · [docs](https://docs.sluiceway.dev/)</sub>"
`;

exports[`a full scan of the example project gives the same dashboard, summary and preview pages from both CLI versions: summary 1`] = `
"## Sluiceway scan

4 stacks previewed: 2 pending, 1 preview failed, 1 in sync.

- Pending: [app:prod](#user-content-sluiceway-app-3a-prod) · [network:dev](#user-content-sluiceway-network-3a-dev)
- Preview failed: [site:prod](#user-content-sluiceway-site-3a-prod)

### Pending

#### <a id="sluiceway-app-3a-prod"></a>app:prod

2 creates

<details><summary>2 changes</summary>

- <kbd>create</kbd> <code>command:local:Command</code> <b>start</b>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>release</b>

</details>

#### <a id="sluiceway-network-3a-dev"></a>network:dev

1 create, 1 update, **2 replaces**, **1 delete**

- :warning: <kbd>DELETE</kbd> <code>random:index/randomString:RandomString</code> <b>subnet</b>
- :warning: <kbd>REPLACE</kbd> <code>local:index/file:File</code> <b>notes</b> · forced by <code>content</code> · also changes <code>contentBase64sha256</code>, <code>contentBase64sha512</code>, <code>contentMd5</code>, <code>contentSha1</code>, <code>contentSha256</code>, <code>contentSha512</code>, <code>id</code>
- :warning: <kbd>REPLACE</kbd> <code>random:index/randomPet:RandomPet</code> <b>name</b> · forced by <code>prefix</code>

<details><summary>2 other changes</summary>

- <kbd>update</kbd> <code>command:local:Command</code> <b>banner</b> · <code>environment.STAGE</code>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>extra</b>

</details>

### Preview failed

- <a id="sluiceway-site-3a-prod"></a>**site:prod** · the tool exited with an error (exit code 1) · the tool's own words are in the [job log](https://github.com/acme/infra/actions/runs/4242/job/106502264185), in the group <code>site:prod</code>

### In sync

- <a id="sluiceway-network-3a-prod"></a>network:prod
"
`;

exports[`a full scan of the example project gives the same dashboard, summary and preview pages from both CLI versions: sluiceway / app:prod 1`] = `
"**app:prod** · 2 creates

Sluiceway's own diff of this stack: what a deploy would change, never what it changes to. It is the diff the stack's row on the [dashboard](https://github.com/acme/infra/issues?q=is%3Aissue%20is%3Aopen%20label%3A%22sluiceway%22) shows, with every property path whole.

Every stack this scan previewed is in the [summary](https://github.com/acme/infra/actions/runs/4242/attempts/1) of the scan, and the tool's own words are in the [job log](https://github.com/acme/infra/actions/runs/4242/job/106502264185), in the group <code>app:prod</code>.

- <kbd>create</kbd> <code>command:local:Command</code> <b>start</b>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>release</b>
"
`;

exports[`a full scan of the example project gives the same dashboard, summary and preview pages from both CLI versions: sluiceway / network:dev 1`] = `
"**network:dev** · 1 create, 1 update, **2 replaces**, **1 delete**

:warning: **This deploy deletes 1, replaces 2.**

Sluiceway's own diff of this stack: what a deploy would change, never what it changes to. It is the diff the stack's row on the [dashboard](https://github.com/acme/infra/issues?q=is%3Aissue%20is%3Aopen%20label%3A%22sluiceway%22) shows, with every property path whole.

Every stack this scan previewed is in the [summary](https://github.com/acme/infra/actions/runs/4242/attempts/1) of the scan, and the tool's own words are in the [job log](https://github.com/acme/infra/actions/runs/4242/job/106502264185), in the group <code>network:dev</code>.

- :warning: <kbd>DELETE</kbd> <code>random:index/randomString:RandomString</code> <b>subnet</b>
- :warning: <kbd>REPLACE</kbd> <code>local:index/file:File</code> <b>notes</b> · forced by <code>content</code> · also changes <code>contentBase64sha256</code>, <code>contentBase64sha512</code>, <code>contentMd5</code>, <code>contentSha1</code>, <code>contentSha256</code>, <code>contentSha512</code>, <code>id</code>
- :warning: <kbd>REPLACE</kbd> <code>random:index/randomPet:RandomPet</code> <b>name</b> · forced by <code>prefix</code>
- <kbd>update</kbd> <code>command:local:Command</code> <b>banner</b> · <code>environment.STAGE</code>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>extra</b>
"
`;

exports[`a stack of the example project that does not exist in the backend gives the same row and summary from both CLI versions: row 1`] = `
"- **network:prod** · preview failed: the stack does not exist in the backend · [run](https://github.com/acme/infra/actions/runs/4242/job/106502264185) <!-- sluiceway:row stack="network:prod" state="preview-failed" -->
  <!-- /sluiceway:row -->"
`;

exports[`a stack of the example project that does not exist in the backend gives the same row and summary from both CLI versions: summary 1`] = `
"## Sluiceway scan

4 stacks previewed: 2 pending, 2 preview failed.

- Pending: [app:prod](#user-content-sluiceway-app-3a-prod) · [network:dev](#user-content-sluiceway-network-3a-dev)
- Preview failed: [network:prod](#user-content-sluiceway-network-3a-prod) · [site:prod](#user-content-sluiceway-site-3a-prod)

### Pending

#### <a id="sluiceway-app-3a-prod"></a>app:prod

2 creates

<details><summary>2 changes</summary>

- <kbd>create</kbd> <code>command:local:Command</code> <b>start</b>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>release</b>

</details>

#### <a id="sluiceway-network-3a-dev"></a>network:dev

1 create, 1 update, **2 replaces**, **1 delete**

- :warning: <kbd>DELETE</kbd> <code>random:index/randomString:RandomString</code> <b>subnet</b>
- :warning: <kbd>REPLACE</kbd> <code>local:index/file:File</code> <b>notes</b> · forced by <code>content</code> · also changes <code>contentBase64sha256</code>, <code>contentBase64sha512</code>, <code>contentMd5</code>, <code>contentSha1</code>, <code>contentSha256</code>, <code>contentSha512</code>, <code>id</code>
- :warning: <kbd>REPLACE</kbd> <code>random:index/randomPet:RandomPet</code> <b>name</b> · forced by <code>prefix</code>

<details><summary>2 other changes</summary>

- <kbd>update</kbd> <code>command:local:Command</code> <b>banner</b> · <code>environment.STAGE</code>
- <kbd>create</kbd> <code>random:index/randomPet:RandomPet</code> <b>extra</b>

</details>

### Preview failed

- <a id="sluiceway-network-3a-prod"></a>**network:prod** · the stack does not exist in the backend · the tool's own words are in the [job log](https://github.com/acme/infra/actions/runs/4242/job/106502264185), in the group <code>network:prod</code> · create it, or take it off the dashboard with <code>&quot;network:prod&quot;</code> under <code>ignore</code> in <code>sluiceway.yaml</code>
- <a id="sluiceway-site-3a-prod"></a>**site:prod** · the tool exited with an error (exit code 1) · the tool's own words are in the [job log](https://github.com/acme/infra/actions/runs/4242/job/106502264185), in the group <code>site:prod</code>
"
`;
